# WakenLLM-toolkit

./: .gitignore  LICENSE  Makefile  README.md  main.py  requirements  requirements.txt  run_verification_test.py  设计文档.md
Bosch Tiried Agent/: CLAUDE.md  Cases.docx  (+1 more)
Bosch_DeepResearch/deer-flow-2-copy/backend/: CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.daily-scout-bot  README.md  demo_failing_urls_extraction.py  pyproject.toml  test_citation_integration.py  test_report_citations.py  verify_citations.py
Bosch_DeepResearch/deer-flow-2-copy/backend/docs/: API.md  APPLE_CONTAINER.md  ARCHITECTURE.md  CONFIGURATION.md  FILE_UPLOAD.md  PATH_EXAMPLES.md  SETUP.md  plan_mode_usage.md
Bosch_DeepResearch/deer-flow-2-copy/backend/scripts/: daily_scout_accounts.py  daily_scout_email_preview.py  daily_scout_email_template.py  daily_scout_prompt.md  daily_scout_report_web.py  daily_scout_teams_bot.py  verify_tavily_publication_dates.py
Bosch_DeepResearch/deer-flow-2-copy/backend/tests/: README_FAILING_URLS_TESTS.md  SUMMARY_FAILING_URLS_TESTS.md  test_citation_examples_failing_urls.py  test_citation_examples_live_failing_urls.py  test_citation_examples_offline.py  test_citation_middleware_pipeline.py  test_client.py  test_custom_agent.py  test_daily_scout_scheduler.py  test_image_generation_skill_bundle.py  test_pptx_skill_bundle.py  test_publication_date.py  test_publication_date_fallback_fetch.py  test_ragflow_citations.py  test_sdxl_skill_components.py  test_tavily_live_publication_dates.py  test_tavily_live_publication_dates_bulk.py  test_tavily_zhihu_jina.py
(+202 files in other folders)
